:bug: correct wrong padding

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 @media screen and (min-width: 1024px) {
   body {
-    padding: 1.5em 10em 0 4em;
+    padding: 3em 10em 0 4em;
   }
 }
 
@@ -139,6 +139,12 @@ main {
   border: none;
   box-shadow: 2px 4px 10px 10px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+@media screen and (min-width: 1024px) {
+  .register-btn {
+    font-size: 1.125rem;
+  }
 }
 
 .register-btn:hover {
